<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/lightgrey"
        android:padding="10dp"
        android:textColor="#212529"
        android:textSize="50sp"
        android:gravity="end|bottom"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/Clearbutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:backgroundTint="#8d99ae"
            android:onClick="onClear"
            android:text="@string/clear"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Dividebutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#fb8500"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textSize="20sp"
            app:cornerRadius="2mm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/Seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#fb8500"
            android:onClick="onOperator"
            android:text="@string/x"
            android:textSize="20sp"
            app:cornerRadius="2mm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/Four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#fb8500"
            android:onClick="onOperator"
            android:text="@string/Subtract"
            android:textSize="20sp"
            app:cornerRadius="2mm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/One"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#fb8500"
            android:onClick="onOperator"
            android:text="@string/Add"
            android:textSize="20sp"
            app:cornerRadius="2mm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/Zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:backgroundTint="#212529"
            android:onClick="onDigit"
            android:text="0"
            android:textSize="16sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Decimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#212529"
            android:onClick="onDecimalPoint"
            android:text="@string/Decimal"
            android:textSize="20sp"
            app:cornerRadius="2mm" />

        <Button
            android:id="@+id/Equalsto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#fb8500"
            android:onClick="onEqual"
            android:text="@string/Equalsto"
            android:textSize="20sp"
            app:cornerRadius="2mm" />


    </LinearLayout>



</LinearLayout>


